# budget-tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: auth.py  database.py  main.py  models.py
app/routers/: transactions.py  user.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
